--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Gabriel Amanfo Gyimah <gabrielamanfogyimah@gmail.com>
-Isreal Aluko <eazyisreal192@gmail.com>
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
