--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Tom Alata <alatatomondi@gmail.com>
-Joab O. Nyamagiri <jonyamagiri@gmail.com>
+Gabriel Amanfo Gyimah <gabrielamanfogyimah@gmail.com>
+Isreal Aluko <eazyisreal192@gmail.com>
